--- a/test/fixtures/contacts.yml
+++ b/test/fixtures/contacts.yml
@@ -5,8 +5,7 @@ one:
   city: MyString
   postcode: MyString
   street: MyString
-  phone: 
-  limit: 
+  phone: 1
   email: MyString
   authority_id: 
 
@@ -15,7 +14,6 @@ two:
   city: MyString
   postcode: MyString
   street: MyString
-  phone: 
-  limit: 
+  phone: 1
   email: MyString
   authority_id: 
