--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,25 @@
-# SQLite version 3.x
-#   gem install sqlite3
+# default: &default
+#   adapter: postgresql
+#   encoding: unicode
+#   pool: 5
+#   username: <%= ENV['POSTGRES_USER'] %>
+#   password: <%= ENV['POSTGRES_PASSWORD'] %>
+#   host: <%= ENV['POSTGRES_HOST'] %>
 #
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+# development:
+#   <<: *default
+#   database: gavin_development
 #
+# test:
+#   <<: *default
+#   database: gavin_test
+#
+# production:
+#   adapter: postgresql
+#   encoding: unicode
+#   pool: 5
+#   url: <%= ENV['DATABASE_URL'] %>
+
 default: &default
   adapter: sqlite3
   pool: 5
